--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -13,6 +13,15 @@
     <title>
         <%= data.title%>
     </title>
+    <style>
+        .divider:after,
+        .divider:before {
+            content: "";
+            flex: 1;
+            height: 1px;
+            background: #eee;
+        }
+    </style>
 </head>
 
 <body>
