--- a/src/views/viewDetailUser.ejs
+++ b/src/views/viewDetailUser.ejs
@@ -18,7 +18,7 @@
                 </span>
             </p>
             <p class="card-text">
-                Sex:
+                Gender:
                 <span id="sex">
                     <%= data.user.sex==0 ? 'Nam' : 'Nữ' %>
                 </span>
