--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -8,11 +8,20 @@
         </a>
 
         <ul class="nav nav-pills">
-            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="/viewalluser" class="nav-link">List User</a></li>
+
+            <% if (fullname !=null) {%>
+                <li class="nav-item"><a href="#" class="nav-link text-dark pe-1">hello cô ba,</a></li>
+                <li class="nav-item"><a href="/logout" class="nav-link text-danger ps-0">Đăng xuất</a></li>
+                <% }else{%>
+                    <li class="nav-item text-dark"><a href="/login" class="nav-link"><i
+                                class="bi bi-person-circle pe-1 text-dark"></i><span class="text-dark">Login</span></a>
+                    </li>
+                    <% }%>
+
         </ul>
     </header>
 </div>
