--- a/src/views/viewAllUser.ejs
+++ b/src/views/viewAllUser.ejs
@@ -1,38 +1,43 @@
-<table class="table table-hover container">
-    <thead>
-        <tr>
-            <th scope="col">STT</th>
-            <th scope="col">Username</th>
-            <th scope="col">Full name</th>
-            <th scope="col">Address</th>
-            <th scope="col">Setting</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% data.rows.forEach(function(user, index) { %>
+<div class="container">
+    <a href="/adduser" class="fs-3 text-dark m-2 pb-4"><i class="bi bi-person-plus-fill"></i>
+        <span class="fs-4">Add User</span>
+    </a>
+    <table class="table table-hover">
+        <thead>
             <tr>
-                <th scope="row">
-                    <%= index + 1 %>
-                </th>
-                <td>
-                    <%= user.username %>
-                </td>
-                <td>
-                    <%= user.fullname %>
-                </td>
-                <td>
-                    <%= user.address %>
-                </td>
-                <td class="fs-5">
-                    <a href="/user/view/<%= user.username %>" class="btn"><i class="bi bi-eye-fill"></i></a>
-                    <a href="/user/edit/<%= user.username %>" class="btn"><i
-                            class="bi bi-pencil-square text-success mx-2"></i></a>
-                    <form action="/api/delete" method="post" class="d-inline-block">
-                        <input type="hidden" name="username" value="<%= user.username %>" />
-                        <button class="btn" type="submit"><i class="bi bi-trash3-fill text-danger"></i></button>
-                    </form>
-                </td>
-                <% }); %>
+                <th scope="col">STT</th>
+                <th scope="col">Username</th>
+                <th scope="col">Full name</th>
+                <th scope="col">Address</th>
+                <th scope="col">Setting</th>
             </tr>
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            <% data.rows.forEach(function(user, index) { %>
+                <tr>
+                    <th scope="row">
+                        <%= index + 1 %>
+                    </th>
+                    <td>
+                        <%= user.username %>
+                    </td>
+                    <td>
+                        <%= user.fullname %>
+                    </td>
+                    <td>
+                        <%= user.address %>
+                    </td>
+                    <td class="fs-5">
+                        <a href="/user/view/<%= user.username %>" class="btn"><i class="bi bi-eye-fill"></i></a>
+                        <a href="/edituser/<%= user.username %>" class="btn"><i
+                                class="bi bi-pencil-square text-success mx-2"></i></a>
+                        <form action="/api/deluser" method="post" class="d-inline-block">
+                            <input type="hidden" name="username" value="<%= user.username %>" />
+                            <button class="btn" type="submit"><i class="bi bi-trash3-fill text-danger"></i></button>
+                        </form>
+                    </td>
+                    <% }); %>
+                </tr>
+        </tbody>
+    </table>
+</div>
