--- a/src/views/viewAllUser.ejs
+++ b/src/views/viewAllUser.ejs
@@ -27,16 +27,18 @@
                     <td>
                         <%= user.address %>
                     </td>
-                    <td class="fs-5">
-                        <a href="/user/view/<%= user.username %>" class="btn"><i class="bi bi-eye-fill"></i></a>
-                        <a href="/edituser/<%= user.username %>" class="btn"><i
-                                class="bi bi-pencil-square text-success mx-2"></i></a>
-                        <form action="/api/deluser" method="post" class="d-inline-block">
-                            <input type="hidden" name="username" value="<%= user.username %>" />
-                            <button class="btn" type="submit"><i class="bi bi-trash3-fill text-danger"></i></button>
-                        </form>
-                    </td>
-                    <% }); %>
+                    <% if(isLogin && (role==0 || user.username==username)) { %>
+                        <td class="fs-5">
+                            <a href="/user/view/<%= user.username %>" class="btn"><i class="bi bi-eye-fill"></i></a>
+                            <a href="/edituser/<%= user.username %>" class="btn"><i
+                                    class="bi bi-pencil-square text-success mx-2"></i></a>
+                            <form action="/api/deluser/<%= user.username %>" method="post" class="d-inline-block">
+                                <input type="hidden" name="username" value="<%= user.username %>" />
+                                <button class="btn" type="submit"><i class="bi bi-trash3-fill text-danger"></i></button>
+                            </form>
+                        </td>
+                        <% } %>
+                            <% }); %>
                 </tr>
         </tbody>
     </table>
